--- a/upload/catalog/view/theme/default/template/common/header.twig
+++ b/upload/catalog/view/theme/default/template/common/header.twig
@@ -23,9 +23,11 @@
   <link href="catalog/view/theme/default/stylesheet/bootstrap.css" rel="stylesheet" media="screen"/>
   <script src="catalog/view/javascript/bootstrap/js/popper.min.js" type="text/javascript"></script>
   <script src="catalog/view/javascript/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="catalog/view/dist/main.js" type="text/javascript"></script>
   <link href="catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
   <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,300,700" rel="stylesheet" type="text/css"/>
   <link href="catalog/view/theme/default/stylesheet/stylesheet.css" rel="stylesheet">
+  <link href="catalog/view/dist/main.css" rel="stylesheet">
   {% for style in styles %}
     <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}"/>
   {% endfor %}
