--- a/upload/catalog/view/theme/default/template/checkout/checkout.twig
+++ b/upload/catalog/view/theme/default/template/checkout/checkout.twig
@@ -41,20 +41,20 @@
             </div>
           {% endif %}
         </div>
-        {% if shipping_required %}
-          <div class="card">
-            <h4 class="card-header collapsed" data-toggle="collapse" data-target="#collapse-shipping-address">{{ text_checkout_shipping_address }}</h4>
-            <div id="collapse-shipping-address" class="collapse" data-parent="#accordion">
-              <div class="card-body"></div>
-            </div>
-          </div>
-          <div class="card">
-            <h4 class="card-header collapsed" data-toggle="collapse" data-target="#collapse-shipping-address">{{ text_checkout_shipping_method }}</h4>
-            <div id="collapse-shipping-method" class="collapse" data-parent="#accordion">
-              <div class="card-body"></div>
-            </div>
-          </div>
-        {% endif %}
+        {#{% if shipping_required %}#}
+          {#<div class="card">#}
+            {#<h4 class="card-header collapsed" data-toggle="collapse" data-target="#collapse-shipping-address">{{ text_checkout_shipping_address }}</h4>#}
+            {#<div id="collapse-shipping-address" class="collapse" data-parent="#accordion">#}
+              {#<div class="card-body"></div>#}
+            {#</div>#}
+          {#</div>#}
+          {#<div class="card">#}
+            {#<h4 class="card-header collapsed" data-toggle="collapse" data-target="#collapse-shipping-address">{{ text_checkout_shipping_method }}</h4>#}
+            {#<div id="collapse-shipping-method" class="collapse" data-parent="#accordion">#}
+              {#<div class="card-body"></div>#}
+            {#</div>#}
+          {#</div>#}
+        {#{% endif %}#}
         <div class="card">
           <h4 class="card-header collapsed" data-toggle="collapse" data-target="#collapse-payment-method">{{ text_checkout_payment_method }}</h4>
           <div id="collapse-payment-method" class="collapse" data-parent="#accordion">
