--- a/upload/catalog/view/theme/default/template/checkout/register.twig
+++ b/upload/catalog/view/theme/default/template/checkout/register.twig
@@ -147,18 +147,18 @@
       <div class="form-group required">
         <label class="col-form-label" for="input-payment-postcode">{{ entry_postcode }}</label> <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-payment-postcode" class="form-control"/>
       </div>
-      <div class="form-group required">
-        <label class="col-form-label" for="input-payment-country">{{ entry_country }}</label> <select name="country_id" id="input-payment-country" class="form-control">
-          <option value="">{{ text_select }}</option>
-          {% for country in countries %}
-            {% if country.country_id == country_id %}
-              <option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>
-            {% else %}
-              <option value="{{ country.country_id }}">{{ country.name }}</option>
-            {% endif %}
-          {% endfor %}
-        </select>
-      </div>
+      {#<div class="form-group required">#}
+        {#<label class="col-form-label" for="input-payment-country">{{ entry_country }}</label> <select name="country_id" id="input-payment-country" class="form-control">#}
+          {#<option value="">{{ text_select }}</option>#}
+          {#{% for country in countries %}#}
+            {#{% if country.country_id == country_id %}#}
+              {#<option value="{{ country.country_id }}" selected="selected">{{ country.name }}</option>#}
+            {#{% else %}#}
+              {#<option value="{{ country.country_id }}">{{ country.name }}</option>#}
+            {#{% endif %}#}
+          {#{% endfor %}#}
+        {#</select>#}
+      {#</div>#}
       <div class="form-group required">
         <label class="col-form-label" for="input-payment-zone">{{ entry_zone }}</label> <select name="zone_id" id="input-payment-zone" class="form-control"> </select>
       </div>
